--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "jest": "^23.6.0",
     "typescript": "^3.1.3"
   }
 }
