--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^23.3.7",
+    "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
-    "@types/lodash": "^4.14.119",
     "jest": "^23.6.0",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.1.3"
   }
 }
