--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts-ts": "3.1.0"
   },
   "scripts": {
