--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^23.3.7",
     "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.0",
+    "@types/node-sass": "^4.11.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "jest": "^23.6.0",
