--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-router": "^5.0.0",
+    "@types/react-router-dom": "^4.3.3",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
