--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "@types/react-dom": "^16.0.9",
     "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.3.3",
-    "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-react": "^3.6.0",
+    "eslint-plugin-react": "^7.14.2",
     "typescript": "^3.1.3"
   },
   "browserslist": {
