--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router": "^5.0.0",
@@ -28,6 +29,7 @@
     "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.0",
     "@types/node-sass": "^4.11.0",
+    "@types/prop-types": "^15.7.1",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-router": "^5.0.0",
