--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/react-router": "^5.0.0",
         "@types/react-router-dom": "^4.3.3",
         "eslint-plugin-react": "^7.14.2",
+        "eslint-plugin-react-hooks": "^1.6.1",
         "typescript": "^3.1.3"
     },
     "browserslist": {
