--- a/.sample.env
+++ b/.sample.env
@@ -1,1 +1,7 @@
 REACT_APP_SERVER_URL=http://localhost:3000
+REACT_APP_FIREBASE_API_KEY=api_key
+REACT_APP_FIREBASE_AUTHDOMAIN=example.com
+REACT_APP_FIREBASE_DATABASE_URL=example.com
+REACT_APP_FIREBASE_PROJECT_ID=projectId
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=senderId
+REACT_APP_FIREBASE_APP_ID=appId
