--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
         "@fortawesome/react-fontawesome": "^0.1.4",
         "axios": "^0.18.0",
         "bulma": "^0.7.2",
+        "firebase": "^6.4.0",
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
         "node-sass": "^4.11.0",
         "prop-types": "^15.7.2",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
+        "react-firebaseui": "^4.0.0",
         "react-router": "^5.0.0",
         "react-router-dom": "^5.0.0",
         "react-scripts": "^3.0.0"
