--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
         "@types/react-dom": "^16.0.9",
         "@types/react-router": "^5.0.0",
         "@types/react-router-dom": "^4.3.3",
+        "@typescript-eslint/eslint-plugin": "^2.5.0",
+        "@typescript-eslint/parser": "^2.5.0",
+        "eslint": "^6.6.0",
         "eslint-plugin-react": "^7.14.2",
         "eslint-plugin-react-hooks": "^1.6.1",
         "typescript": "^3.1.3"
