--- a/.sample.env
+++ b/.sample.env
@@ -5,3 +5,4 @@ REACT_APP_FIREBASE_DATABASE_URL=example.com
 REACT_APP_FIREBASE_PROJECT_ID=projectId
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=senderId
 REACT_APP_FIREBASE_APP_ID=appId
+REACT_APP_FIREBASE_BUCKET=storageBucket
