--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-router": "^5.0.0",
         "react-router-dom": "^5.0.0",
         "react-scripts": "^3.0.0",
+        "recoil": "^0.0.10",
         "uuid": "^7.0.2"
     },
     "scripts": {
