--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "moment": "^2.24.0",
         "node-sass": "^4.11.0",
         "prop-types": "^15.7.2",
+        "ramda": "^0.27.1",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-firebaseui": "^4.1.0",
@@ -31,6 +32,7 @@
         "@types/node": "^10.12.0",
         "@types/node-sass": "^4.11.0",
         "@types/prop-types": "^15.7.1",
+        "@types/ramda": "types/npm-ramda#dist",
         "@types/react": "^16.4.18",
         "@types/react-dom": "^16.0.9",
         "@types/react-router": "^5.0.0",
