--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "version": "1.6.1",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^3.2.5",
         "@fortawesome/fontawesome-free": "^5.14.0",
         "axios": "^0.20.0",
         "bulma": "^0.9.0",
         "firebase": "^7.21.0",
+        "graphql": "^15.3.0",
         "moment": "^2.29.0",
         "node-sass": "^4.14.1",
         "ramda": "^0.27.1",
