--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "eslint": "^6.6.0",
         "eslint-plugin-react": "^7.21.1",
         "eslint-plugin-react-hooks": "^4.1.2",
+        "prettier": "^2.1.2",
         "typescript": "^4.0.3"
     },
     "browserslist": {
