--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "react-firebaseui": "^4.1.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^3.4.3",
+        "react-scripts": "4.0.0",
         "recoil": "^0.0.13",
         "styled-components": "^5.2.0",
         "uuid": "^8.3.0"
