--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "react-firebaseui": "^4.1.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.0",
+        "react-scripts": "^4.0.0",
         "recoil": "^0.0.13",
         "styled-components": "^5.2.0",
         "uuid": "^8.3.0"
@@ -27,6 +27,7 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
+        "@types/jest": "^26.0.15",
         "@types/node": "^10.12.0",
         "@types/node-sass": "^4.11.1",
         "@types/ramda": "types/npm-ramda#dist",
@@ -38,7 +39,7 @@
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.2.0",
         "@typescript-eslint/parser": "^4.2.0",
-        "eslint": "^6.6.0",
+        "eslint": "^7.11.0",
         "eslint-plugin-react": "^7.21.1",
         "eslint-plugin-react-hooks": "^4.1.2",
         "typescript": "^4.0.3"
