:bug: fix route

--- a/.sample.env
+++ b/.sample.env
@@ -6,3 +6,4 @@ REACT_APP_FIREBASE_PROJECT_ID=projectId
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=senderId
 REACT_APP_FIREBASE_APP_ID=appId
 REACT_APP_FIREBASE_BUCKET=storageBucket
+NODE_ENV=development
