--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.0",
+        "react-spring": "^9.2.3",
         "recoil": "^0.3.1",
         "styled-components": "^5.2.0",
         "uuid": "^8.3.0",
