--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.0",
+        "react-slick": "^0.28.1",
         "react-spring": "^9.2.3",
         "recoil": "^0.3.1",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^5.2.0",
         "uuid": "^8.3.0",
         "web-vitals": "^0.2.4",
@@ -52,6 +54,7 @@
         "@types/react-dom": "^16.9.8",
         "@types/react-router": "^5.1.8",
         "@types/react-router-dom": "^5.1.5",
+        "@types/react-slick": "^0.23.4",
         "@types/styled-components": "^5.1.3",
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.2.0",
