--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
+        "@types/enzyme": "^3.10.9",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/jest": "^26.0.15",
         "@types/node": "^10.12.0",
         "@types/node-sass": "^4.11.1",
@@ -59,9 +61,14 @@
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.2.0",
         "@typescript-eslint/parser": "^4.2.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.6",
+        "enzyme-to-json": "^3.6.2",
         "eslint": "^7.11.0",
         "eslint-plugin-react": "^7.21.1",
         "eslint-plugin-react-hooks": "^4.1.2",
+        "jest-environment-enzyme": "^7.1.2",
+        "jest-enzyme": "^7.1.2",
         "typescript": "^4.0.3"
     },
     "browserslist": {
