--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "release": "release-it"
     },
     "devDependencies": {
         "@types/enzyme": "^3.10.9",
@@ -69,6 +70,7 @@
         "eslint-plugin-react-hooks": "^4.1.2",
         "jest-environment-enzyme": "^7.1.2",
         "jest-enzyme": "^7.1.2",
+        "release-it": "^14.11.5",
         "typescript": "^4.0.3"
     },
     "browserslist": {
