--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,11 @@ jobs:
               run: |
                   git config --global user.name 'oat9002'
                   git config --global user.email 'oat9002@hotmail.com'
+                  
+            - name: Setup Node.js environment
+              uses: actions/setup-node@v2.3.0
+              with:
+                  node-version: "16"
 
             - name: Install yarn
               run: npm install -g yarn
