--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,9 @@
 {
-  "tabWidth": 4
+  "semi": true,
+  "tabWidth": 4,
+  "printWidth": 100,
+  "trailingComma": "es5",
+  "bracketSameLine": true,
+  "bracketSpacing": true,
+  "jsxSingleQuote": false
 }
