--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "firebase": "^8.6.7",
         "graphql": "^15.4.0",
         "node-sass": "^6.0.0",
-        "prettier": "^2.2.1",
         "ramda": "^0.27.1",
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
@@ -45,7 +44,10 @@
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
-        "release": "release-it"
+        "release": "release-it",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix",
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,scss}'"
     },
     "devDependencies": {
         "@types/enzyme": "^3.10.9",
@@ -67,10 +69,13 @@
         "enzyme-adapter-react-16": "^1.15.6",
         "enzyme-to-json": "^3.6.2",
         "eslint": "^7.11.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.21.1",
         "eslint-plugin-react-hooks": "^4.1.2",
         "jest-environment-enzyme": "^7.1.2",
         "jest-enzyme": "^7.1.2",
+        "prettier": "^2.4.1",
         "release-it": "^14.11.5",
         "typescript": "^4.4.2"
     },
