--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,8 @@
         // Place to specify ESLint rules. Can be used to overwrite rules specified from the extended configs
         // e.g. "@typescript-eslint/explicit-function-return-type": "off",
         "semi": ["error", "always"],
-        "@typescript-eslint/no-var-requires": "on",
-        "@typescript-eslint/no-explicit-any": "on",
+        "@typescript-eslint/no-var-requires": "error",
+        "@typescript-eslint/no-explicit-any": "off",
         "quotes": ["error", "double", { "allowTemplateLiterals": true }],
         "react/prop-types": "off",
         "react/react-in-jsx-scope": "off",
