--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "recoil": "^0.3.1",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.2.0",
+        "swiper": "^7.4.1",
         "uuid": "^8.3.0",
         "web-vitals": "^0.2.4",
         "workbox-background-sync": "^5.1.3",
