--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
         "release": "release-it",
-        "lint": "eslint .",
-        "lint:fix": "eslint --fix",
+        "lint": "eslint ./src/",
+        "lint:fix": "eslint ./src/ --fix",
         "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,scss}'"
     },
     "devDependencies": {
