--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
         "@types/jest": "^26.0.15",
         "@types/node": "^10.12.0",
         "@types/node-sass": "^4.11.1",
-        "@types/ramda": "types/npm-ramda#dist",
-        "@types/react": "^17.0.11",
-        "@types/react-dom": "^17.0.11",
+        "@types/ramda": "^0.28.1",
+        "@types/react": "^18.0.5",
+        "@types/react-dom": "^18.0.0",
         "@types/react-router": "^5.1.8",
         "@types/react-router-dom": "^5.1.5",
         "@types/styled-components": "^5.1.19",
