--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@apollo/client": "^3.5.10",
         "@fortawesome/fontawesome-free": "^5.15.4",
         "bulma": "^0.9.3",
+        "bulma-switch": "^2.0.4",
         "dayjs": "^1.10.8",
         "firebase": "^9.6.8",
         "graphql": "^16.3.0",
