--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "release": "release-it",
         "lint": "eslint ./src/",
         "lint:fix": "eslint ./src/ --fix",
-        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,scss}'"
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,scss}'",
+        "vercel": "vercel"
     },
     "devDependencies": {
         "@types/enzyme": "^3.10.9",
@@ -75,7 +76,8 @@
         "jest-enzyme": "^7.1.2",
         "prettier": "^2.4.1",
         "release-it": "^14.13.1",
-        "typescript": "^4.4.2"
+        "typescript": "^4.4.2",
+        "vercel": "^24.1.0"
     },
     "browserslist": {
         "production": [
