--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,4 +41,4 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: ./.github/workflows/deploy
+            - uses: ./.github/workflows/deploy.yml@main
