--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,4 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     deploy:
         needs: release
-        runs-on: ubuntu-latest
-
-        steps:
-            - uses: ./.github/workflows/deploy.yml@main
+        uses: ./.github/workflows/deploy.yml
