--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,3 +39,7 @@ jobs:
     deploy:
         needs: release
         uses: ./.github/workflows/deploy.yml
+        secrets:
+            VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+            VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+            VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
