--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,17 @@ on:
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
     workflow_call:
+        secrets:
+            VERCEL_TOKEN:
+                description: 'vercel token'
+                required: true
+            VERCEL_ORG_ID:
+                description: 'vercel organization id'
+                required: true
+            VERCEL_PROJECT_ID:
+                description: 'vercel project id'
+                required: true
+            
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
