--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "bulma": "^0.9.4",
         "bulma-switch": "^2.0.4",
         "dayjs": "^1.11.5",
-        "firebase": "^9.11.0",
+        "firebase": "9.10.0",
         "graphql": "^16.6.0",
         "node-sass": "^7.0.1",
         "ramda": "^0.28.0",
