--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
             - uses: actions/checkout@v3
               with:
                   fetch-depth: 0
+            - run: git checkout HEAD^
 
             - name: Setup Node.js environment
               uses: actions/setup-node@v2.3.0
