--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,11 @@ on:
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
     workflow_call:
+        inputs:
+            pull-latest:
+                required: false
+                type: boolean
+                default: false
         secrets:
             VERCEL_TOKEN:
                 description: "vercel token"
@@ -30,6 +35,10 @@ jobs:
               uses: actions/setup-node@v2.3.0
               with:
                   node-version: "16"
+
+            - name: Pull latest
+              if: ${{ inputs.pull-latest }}
+              run: git pull
 
             - name: Install package
               run: yarn install
