--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-router-dom": "^6.4.3",
         "react-scripts": "^5.0.1",
         "react-spring": "^9.5.5",
+        "recharts": "^2.2.0",
         "recoil": "^0.7.5",
         "styled-components": "^5.3.3",
         "swiper": "^8.4.3",
