--- a/.sample.env
+++ b/.sample.env
@@ -1,9 +1,9 @@
-REACT_APP_SERVER_URL=http://localhost:3000
-REACT_APP_FIREBASE_API_KEY=api_key
-REACT_APP_FIREBASE_AUTHDOMAIN=example.com
-REACT_APP_FIREBASE_DATABASE_URL=example.com
-REACT_APP_FIREBASE_PROJECT_ID=projectId
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=senderId
-REACT_APP_FIREBASE_APP_ID=appId
-REACT_APP_FIREBASE_BUCKET=storageBucket
+VITE_SERVER_URL=http://localhost:3000
+VITE_FIREBASE_API_KEY=api_key
+VITE_FIREBASE_AUTHDOMAIN=example.com
+VITE_FIREBASE_DATABASE_URL=example.com
+VITE_FIREBASE_PROJECT_ID=projectId
+VITE_FIREBASE_MESSAGING_SENDER_ID=senderId
+VITE_FIREBASE_APP_ID=appId
+VITE_FIREBASE_BUCKET=storageBucket
 NODE_ENV=development
