--- a/package.json
+++ b/package.json
@@ -40,10 +40,9 @@
         "workbox-streams": "^6.5.1"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject",
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
         "release": "release-it",
         "lint": "eslint ./src/",
         "lint:fix": "eslint ./src/ --fix",
@@ -77,8 +76,10 @@
         "jest-enzyme": "^7.1.2",
         "prettier": "^2.7.1",
         "release-it": "^15.5.0",
-        "typescript": "^4.4.2",
-        "vercel": "^24.1.0"
+        "typescript": "^4.9.3",
+        "vercel": "^24.1.0",
+        "@vitejs/plugin-react-swc": "^3.0.0",
+        "vite": "^4.1.0"
     },
     "browserslist": {
         "production": [
