--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^5.42.0",
         "@typescript-eslint/parser": "^5.42.0",
+        "@vitejs/plugin-react-swc": "^3.0.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.6",
         "enzyme-to-json": "^3.6.2",
@@ -76,10 +77,11 @@
         "jest-enzyme": "^7.1.2",
         "prettier": "^2.7.1",
         "release-it": "^15.5.0",
+        "sass": "^1.58.0",
         "typescript": "^4.9.3",
         "vercel": "^24.1.0",
-        "@vitejs/plugin-react-swc": "^3.0.0",
-        "vite": "^4.1.0"
+        "vite": "^4.1.0",
+        "vite-plugin-svgr": "^2.4.0"
     },
     "browserslist": {
         "production": [
