--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^5.42.0",
         "@typescript-eslint/parser": "^5.42.0",
-        "@vitejs/plugin-react-swc": "^3.0.0",
+        "@vitejs/plugin-react": "^3.1.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.6",
         "enzyme-to-json": "^3.6.2",
