--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "typescript": "^4.9.3",
         "vercel": "^24.1.0",
         "vite": "^4.1.0",
+        "vite-plugin-pwa": "^0.14.4",
         "vite-plugin-svgr": "^2.4.0"
     },
     "browserslist": {
