--- a/package.json
+++ b/package.json
@@ -24,20 +24,7 @@
         "recoil": "^0.7.5",
         "styled-components": "^5.3.3",
         "swiper": "^8.4.3",
-        "uuid": "^8.3.2",
-        "web-vitals": "^2.1.4",
-        "workbox-background-sync": "^6.5.1",
-        "workbox-broadcast-update": "^6.5.1",
-        "workbox-cacheable-response": "^6.5.1",
-        "workbox-core": "^6.5.1",
-        "workbox-expiration": "^6.5.1",
-        "workbox-google-analytics": "^6.5.1",
-        "workbox-navigation-preload": "^6.5.1",
-        "workbox-precaching": "^6.5.1",
-        "workbox-range-requests": "^6.5.1",
-        "workbox-routing": "^6.5.1",
-        "workbox-strategies": "^6.5.1",
-        "workbox-streams": "^6.5.1"
+        "uuid": "^8.3.2"
     },
     "scripts": {
         "dev": "vite",
