--- a/package.json
+++ b/package.json
@@ -4,27 +4,26 @@
     "private": true,
     "type": "module",
     "dependencies": {
-        "@apollo/client": "^3.5.10",
-        "@fortawesome/fontawesome-free": "^6.2.1",
+        "@apollo/client": "^3.7.8",
+        "@fortawesome/fontawesome-free": "^6.3.0",
         "bulma": "^0.9.4",
         "bulma-switch": "^2.0.4",
-        "dayjs": "^1.11.5",
-        "firebase": "9.10.0",
+        "dayjs": "^1.11.7",
+        "firebase": "^9.17.1",
         "graphql": "^16.6.0",
-        "node-sass": "^7.0.1",
+        "node-sass": "^8.0.0",
         "ramda": "^0.28.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-firebaseui": "^6.0.0",
-        "react-router": "^6.4.3",
-        "react-router-dom": "^6.4.3",
-        "react-scripts": "^5.0.1",
-        "react-spring": "^9.5.5",
-        "recharts": "^2.2.0",
-        "recoil": "^0.7.5",
-        "styled-components": "^5.3.3",
-        "swiper": "^8.4.3",
-        "uuid": "^8.3.2"
+        "react-router": "^6.8.1",
+        "react-router-dom": "^6.8.1",
+        "react-spring": "^9.6.1",
+        "recharts": "^2.4.3",
+        "recoil": "^0.7.6",
+        "styled-components": "^5.3.6",
+        "swiper": "^9.0.5",
+        "uuid": "^9.0.0"
     },
     "scripts": {
         "start": "vite",
