--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -45,3 +45,16 @@ jobs:
               run: |
                   yarn build
                   yarn test
+
+            - name: Deploy
+              run: VERCEL_ORG_ID=$VERCEL_ORG_ID VERCEL_PROJECT_ID=$VERCEL_PROJECT_ID yarn vercel --scope oat9002 --token $VERCEL_TOKEN > deployment_url.txt
+              env:
+                  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+                  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+                  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
+            - name: Comment Prelive url
+              uses: thollander/actions-comment-pull-request@v2
+              with:
+                message: |
+                  Prelive url: $(cat deployment_url.txt)
