--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -53,16 +53,21 @@ jobs:
                   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
                   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-            - name: Read deployment url
-              id: read_deployment_url
-              run: |
-                url=$(cat deployment_url.txt)
-                echo "PREVIEW_URL=$url" >> $GITHUB_ENV
+            # - name: Read deployment url
+            #   id: read_deployment_url
+            #   run: |
+            #     url=$(cat deployment_url.txt)
+            #     echo "PREVIEW_URL=$url" >> $GITHUB_ENV
+
+            # - name: Comment preview url
+            #   uses: thollander/actions-comment-pull-request@v2
+            #   with:
+            #     message: |
+            #       Prelive url: ${{ steps.read_deployment_url.outputs.PREVIEW_URL }}
+            #     reactions: eyes, rocket
 
             - name: Comment preview url
               uses: thollander/actions-comment-pull-request@v2
               with:
-                message: |
-                  Prelive url: ${{ steps.read_deployment_url.outputs.PREVIEW_URL }}
-                reactions: eyes, rocket
+                filePath: deployment_url.txt
 
