--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -59,6 +59,6 @@ jobs:
             - name: Comment preview url
               uses: thollander/actions-comment-pull-request@v2
               with:
-                filePath: deployment_url.txt
+                filePath: deployment.txt
                 reactions: rocket
 
