--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,15 @@ jobs:
                 VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
                 VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
                 VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+            
+            - name: Comment preview url
+              if: env.IS_PRODUCTION == false
+              uses: thollander/actions-comment-pull-request@v2
+              env:
+                IS_PRODUCTION: ${{ secrets.IS_PRODUCTION }}
+              with:
+                  filePath: deployment.txt
+                  reactions: rocket
 
             - name: Deploy Production
               if: env.IS_PRODUCTION == true
