--- a/.github/workflows/deploy_preview.yml
+++ b/.github/workflows/deploy_preview.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: deploy-preview
+name: deploy_preview
 
 # Controls when the workflow will run
 on:
@@ -9,8 +9,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    # release workflow contains a single job called "build"
-    deploy:
+    deploy_preview:
         if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '/deploy') }}
         uses: ./.github/workflows/deploy.yml
         with:
