--- a/.github/workflows/deploy_preview.yml
+++ b/.github/workflows/deploy_preview.yml
@@ -14,8 +14,8 @@ jobs:
         uses: ./.github/workflows/deploy.yml
         with:
             pull-latest: true
+            is-production: false
         secrets:
-            IS_PRODUCTION: false
             VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
             VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
             VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
