--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
               run: yarn global add vercel@latest
 
             - name: Deploy Preview
-              if: ${{ inputs.is-production == false }}
+              if: ${{ inputs.is-production == 'false' }}
               run: VERCEL_ORG_ID=$VERCEL_ORG_ID VERCEL_PROJECT_ID=$VERCEL_PROJECT_ID vercel --scope oat9002 --token $VERCEL_TOKEN > deployment.txt
               env:
                 VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
@@ -59,7 +59,7 @@ jobs:
                 VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
             
             - name: Comment preview url
-              if: ${{ inputs.is-production == false }}
+              if: ${{ inputs.is-production == 'false' }}
               uses: thollander/actions-comment-pull-request@v2
               with:
                   filePath: deployment.txt
