--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
                   node-version: "16"
 
             - name: Pull latest
-              if: ${{ inputs.pull-latest }}
+              if: ${{ inputs.pull-latest == 'true' }}
               run: git pull
 
             - name: Install package
@@ -66,7 +66,7 @@ jobs:
                   reactions: rocket
 
             - name: Deploy Production
-              if: ${{ inputs.is-production }}
+              if: ${{ inputs.is-production == 'true' }}
               run: VERCEL_ORG_ID=$VERCEL_ORG_ID VERCEL_PROJECT_ID=$VERCEL_PROJECT_ID vercel --prod --scope oat9002 --token $VERCEL_TOKEN
               env:
                 VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
