--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,9 +24,9 @@ jobs:
             - uses: actions/checkout@v3
 
             - name: Setup Node.js environment
-              uses: actions/setup-node@v2.3.0
+              uses: actions/setup-node@v3
               with:
-                  node-version: "18"
+                  node-version: 18
 
             - name: Install package
               run: yarn install
