--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,9 @@ jobs:
                   git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
             - name: Setup Node.js environment
-              uses: actions/setup-node@v2.3.0
+              uses: actions/setup-node@v3
               with:
-                  node-version: "18"
+                  node-version: 18
 
             - name: Install package
               run: yarn install
