--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,13 +21,13 @@ jobs:
 
             - name: Set GitHub user
               run: |
-                git config --global user.name 'github-actions[bot]'
-                git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+                  git config --global user.name 'github-actions[bot]'
+                  git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
             - name: Setup Node.js environment
-              uses: actions/setup-node@v2.3.0
+              uses: actions/setup-node@v3
               with:
-                  node-version: "16"
+                  node-version: 18
 
             - name: Install package
               run: yarn install
