--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@apollo/client": "^3.7.8",
         "@fortawesome/fontawesome-free": "^6.3.0",
+        "@radix-ui/themes": "^1.1.2",
         "bulma": "^0.9.4",
         "bulma-switch": "^2.0.4",
         "dayjs": "^1.11.9",
