--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "dependencies": {
         "@apollo/client": "^3.7.8",
-        "@fortawesome/fontawesome-free": "^6.3.0",
+        "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/themes": "^1.1.2",
         "bulma": "^0.9.4",
         "bulma-switch": "^2.0.4",
