--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dependencies": {
         "@apollo/client": "^3.7.8",
         "@radix-ui/react-icons": "^1.3.0",
-        "@radix-ui/react-toggle-group": "latest",
+        "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/themes": "^1.1.2",
         "bulma": "^0.9.4",
         "bulma-switch": "^2.0.4",
