--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "type": "module",
     "dependencies": {
         "@apollo/client": "^3.7.8",
-        "@fortawesome/fontawesome-free": "^6.3.0",
-        "bulma": "^0.9.4",
-        "bulma-switch": "^2.0.4",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-toggle-group": "^1.0.4",
+        "@radix-ui/themes": "^1.1.2",
         "dayjs": "^1.11.9",
         "firebase": "^10.3.0",
         "graphql": "^16.8.0",
