--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-firebaseui": "^6.0.0",
         "react-router": "^6.21.0",
         "react-router-dom": "^6.21.0",
+        "react-snowfall": "^1.2.1",
         "react-spring": "^9.7.3",
         "recharts": "^2.10.3",
         "recoil": "^0.7.7",
