--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
         "dayjs": "^1.11.13",
         "firebase": "^11.0.2",
         "graphql": "^16.9.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "jotai": "^2.10.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "react-firebaseui": "^6.0.0",
         "react-router": "^7.0.2",
         "react-router-dom": "^7.0.2",
         "react-snowfall": "^2.2.0",
         "react-spring": "^9.7.4",
         "recharts": "^2.14.1",
-        "recoil": "^0.7.7",
         "styled-components": "^6.1.13",
         "swiper": "^11.1.15",
         "uuid": "^11.0.3"
@@ -43,8 +43,8 @@
         "@testing-library/react": "^16.0.1",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.1",
-        "@types/react": "^18.3.13",
-        "@types/react-dom": "^18.3.1",
+        "@types/react": "^19.0.1",
+        "@types/react-dom": "^19.0.1",
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-test-renderer": "^18.3.0",
