🐛 test: update AccountCard tests to use Testing Library and add jsdom environment

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,4 @@
 {
-    "setupFilesAfterEnv": [
-        "./src/setupTests.ts"
-    ]
+    "setupFilesAfterEnv": ["./src/setupTests.ts"],
+    "testEnvironment": "jsdom"
 }
