--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@babel/preset-env": "^7.26.0",
         "@babel/preset-react": "^7.26.3",
         "@babel/preset-typescript": "^7.26.0",
+        "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.1.0",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.1",
@@ -47,7 +48,6 @@
         "@types/react-dom": "^19.0.1",
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
-        "@types/react-test-renderer": "^19.0.0",
         "@types/styled-components": "^5.1.34",
         "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^8.17.0",
@@ -60,6 +60,7 @@
         "eslint-plugin-react": "^7.37.2",
         "eslint-plugin-react-hooks": "^5.1.0",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "prettier": "^3.4.2",
         "react-test-renderer": "^19.0.0",
         "release-it": "^17.10.0",
