--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@radix-ui/themes": "^3.2.1",
         "dayjs": "^1.11.13",
         "firebase": "^11.6.1",
+        "framer-motion": "^12.9.2",
         "graphql": "^16.10.0",
         "jotai": "^2.12.3",
         "react": "^19.1.0",
