--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@babel/preset-env": "^7.27.2",
         "@babel/preset-react": "^7.27.1",
         "@babel/preset-typescript": "^7.27.1",
+        "@eslint/compat": "^1.3.1",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/react": "^16.3.0",
         "@types/jest": "^30.0.0",
@@ -69,7 +70,7 @@
         "typescript": "^5.8.3",
         "vercel": "^44.2.7",
         "vite": "^7.0.0",
-        "vite-plugin-pwa": "^1.0.0",
+        "vite-plugin-pwa": "^1.0.1",
         "vite-plugin-svgr": "^4.3.0"
     },
     "browserslist": {
@@ -81,6 +82,5 @@
         "development": [
             "last 1 version"
         ]
-    },
-    "packageManager": "yarn@4.9.2"
+    }
 }
