--- a/babel.config.json
+++ b/babel.config.json
@@ -2,6 +2,7 @@
     "presets": [
         ["@babel/preset-env", { "targets": { "node": "current" }}],
         "@babel/preset-typescript",
-        "@babel/preset-react"
+        "@babel/preset-react",
+        "linaria/babel"
     ]
 }
