Update Babel and Vite configuration for Linaria integration

--- a/babel.config.json
+++ b/babel.config.json
@@ -2,7 +2,6 @@
     "presets": [
         ["@babel/preset-env", { "targets": { "node": "current" }}],
         "@babel/preset-typescript",
-        "@babel/preset-react",
-        "linaria/babel"
+        "@babel/preset-react"
     ]
 }
