--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-toggle-group": "^1.1.11",
         "@radix-ui/themes": "^3.2.1",
-        "@wyw-in-js/babel-preset": "^0.8.1",
         "dayjs": "^1.11.19",
         "firebase": "^12.6.0",
         "framer-motion": "^12.23.24",
@@ -58,6 +57,8 @@
         "@typescript-eslint/eslint-plugin": "^8.47.0",
         "@typescript-eslint/parser": "^8.47.0",
         "@vitejs/plugin-react": "^5.1.1",
+        "@wyw-in-js/babel-preset": "^0.8.1",
+        "@wyw-in-js/vite": "^0.8.1",
         "babel-jest": "^30.2.0",
         "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
